--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing job</h1>
+<h4>Update This Job</h4>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @job %> |
-<%= link_to 'Back', jobs_path %>
+<%= link_to 'Show Job Detail', @job %> |
+<%= link_to 'List All Jobs', jobs_path %>
