--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.association :department %>
-    <%= f.association :user %>
+    <%= f.association :users, :as => :check_boxes %>
   </div>
 
   <div class="form-actions">
